# Ax

./: .gitignore  CMakeLists.txt  build.sh  ex.c  main.c  main.cpp  makefile  readme.md  test-main.cpp
assets/shaders/: FSH-Default.glsl  VSH-Default.glsl
compile/: build.bat
include/: engine.h  window.h
include/Ax/: Config.h  Engine.h  Window.h  engine.h  window-inl.h  window.h
include/Ax/Camera/: Camera.h  Camera3D.h
include/Ax/Common/: Log.h  Types.h
include/Ax/Component/: Transform.h
include/Ax/Entity/: Entity.h
include/Ax/GL/: Buffer.h  BufferConfig.h  BufferTarget.h  Primitive.h  Shader.h  VertexArray.h  VertexBuffer.h
include/Ax/Input/: Input.h
include/Ax/Math/: Random.h
include/Ax/Mesh/: CubeMesh.h  Mesh.h  MeshFactory.h  RectangleMesh.h
include/Ax/Renderer/: Renderer.h
include/Ax/System/: Engine.h  Game.h  Window.h
include/Ax/common/: types.h
include/common/: glm.h  transform.h  types.h
include/core/: transform.h
include/gl/: shader.h  vertex.h
include/graphics/: buffer.h  camera.h  color.h  shader.h  vertex.h
include/io/: io.h
include/math/: cglm-all.h  vec2.h
include/mesh/: cube-mesh.h
include/model/: cube-model.h
include/util/: log.h  random.h
src/: Buffer.cpp  CMakeLists.txt  Camera3D.cpp  Engine.cpp  MeshFactory.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  engine.c  engine.cpp  window.cpp
src/Ax/: engine.cpp  window.cpp
src/core/: transform.c
src/gl/: shader.cpp
src/graphics/: buffer.c  camera.c
src/math/: vec2.c
src/mesh/: cube-mesh.c
src/model/: cube-model.c
(+87 files in other folders)
